added flaot validation
