# docs/swagger.json
@@ -1,10 +1,4 @@
 {
-    "consumes": [
-        "application/json"
-    ],
-    "produces": [
-        "application/json"
-    ],
     "schemes": [
         "http",
         "https"
@@ -96,6 +90,11 @@
         },
         "/api/products/create": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create a new product.",
                 "consumes": [
                     "application/json"
@@ -164,11 +163,6 @@
         },
         "/api/products/{pid}": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "Get Product by given ID.",
                 "consumes": [
                     "application/json"
@@ -246,9 +240,12 @@
                 }
             }
         },
-        "/api/status": {
+        "/api/server/status": {
             "get": {
                 "description": "API status check",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -689,5 +686,19 @@
             "name": "Authorization",
             "in": "header"
         }
-    }
+    },
+    "tags": [
+        {
+            "name": "API"
+        },
+        {
+            "name": "Auth"
+        },
+        {
+            "name": "User"
+        },
+        {
+            "name": "Product"
+        }
+    ]
 }
